copy logic to win module
