# src/app/api/models/wine.ts
@@ -1,0 +1,13 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface Wine {
+  acidity?: number;
+  alcohol?: number;
+  aroma?: null | string;
+  clasification?: number;
+  id?: number;
+  name?: null | string;
+  notes?: null | string;
+  swetness?: number;
+  year?: number;
+}
